--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,11 @@ exclude =
 per-file-ignores =
     */settings.py:E501
 max-complexity = 10
+
+[isort]
+src_paths = yatube_api
+default_section = STDLIB
+known_first_party = api_yatube
+known_django = django
+known_local_folder = api, posts
+sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,DJANGO,LOCALFOLDER
